Add an icon under card

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </p>
           </div>
         </div>
+        <p class='joke'>¯\_(ツ)_/¯</p>
       </div>
     </section>
   </body>
