--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
+    <meta content='initial-scale=1, maximum-scale=1' name='viewport'>
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <title>Daniel Meana Llorián - Index</title>
   </head>
   <body>
-    <section id='welcome'>
-      <div class='center-wrapper'>
-        <div class='card'>
-          <img class='photo' src='https://lh3.googleusercontent.com/7c4na51r1Km9UNjs6fvoti7oYZhf6JF5n4bszDNTduCfnH0Iij65TLwf64i0BCZShQuJ=w438-h436-p-no'>
-          <div class='description'>
-            <p class='name'>Daniel Meana LLorián</p>
-            <p class='location'>Asturias, Spain</p>
-            <p class='location'>Researcher at University of Oviedo</p>
-            <p class='contact'>
-              <a href='mailto:danielmeanallorian@gmail.com'>danielmeanallorian@gmail.com</a>
-            </p>
-          </div>
-        </div>
-        <p class='joke'>¯\_(ツ)_/¯</p>
+    <header itemscope='' itemtype='http://schema.org/Person'>
+      <div class='content'>
+        <img class='photo' itemprop='image' src='https://lh3.googleusercontent.com/7c4na51r1Km9UNjs6fvoti7oYZhf6JF5n4bszDNTduCfnH0Iij65TLwf64i0BCZShQuJ=w438-h436-p-no'>
+        <p class='name' itemprop='name'>Daniel Meana LLorián</p>
+        <p class='location' itemprop='address'>Asturias, Spain</p>
+        <p class='location'>
+          <span itemprop='jobTitle'>Researcher</span>
+          at
+          <span itemprop='affiliation'>University of Oviedo</span>
+        </p>
+        <p class='contact'>
+          <a href='mailto:danielmeanallorian@gmail.com' itemprop='email'>danielmeanallorian@gmail.com</a>
+        </p>
       </div>
-    </section>
+      <button class='next'>More</button>
+    </header>
+    <main></main>
+    <footer class='welcome'>
+      <p>&copy; 2015 Daniel Meana Llorián</p>
+    </footer>
   </body>
 </html>
