Fix LLorián to Llorián

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header itemscope='' itemtype='http://schema.org/Person'>
       <div class='content'>
         <img class='photo' itemprop='image' src='https://lh3.googleusercontent.com/7c4na51r1Km9UNjs6fvoti7oYZhf6JF5n4bszDNTduCfnH0Iij65TLwf64i0BCZShQuJ=w438-h436-p-no'>
-        <p class='name' itemprop='name'>Daniel Meana LLorián</p>
+        <p class='name' itemprop='name'>Daniel Meana Llorián</p>
         <p class='location' itemprop='address'>Asturias, Spain</p>
         <p class='location'>
           <span itemprop='jobTitle'>Researcher</span>
