--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta content='initial-scale=1, maximum-scale=1' name='viewport'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <title>Daniel Meana Llorián - Index</title>
   </head>
