--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <a href='mailto:danielmeanallorian@gmail.com' itemprop='email'>danielmeanallorian@gmail.com</a>
         </p>
       </div>
-      <button class='next'>More</button>
+      <button class='next'>Under construction</button>
     </header>
     <main></main>
     <footer class='welcome'>
-      <p>&copy; 2015 Daniel Meana Llorián</p>
+      <p>&copy; 2016 Daniel Meana Llorián</p>
     </footer>
   </body>
 </html>
