Change email to dani@danimeana.com

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span itemprop='affiliation'>University of Oviedo</span>
         </p>
         <p class='contact'>
-          <a href='mailto:danielmeanallorian@gmail.com' itemprop='email'>danielmeanallorian@gmail.com</a>
+          <a href='mailto:dani@danimeana.com' itemprop='email'>dani@danimeana.com</a>
         </p>
       </div>
       <button class='next'>Under construction</button>
